feat: 使用.kanban.json来记录项目信息

--- a/package.json
+++ b/package.json
@@ -71,8 +71,7 @@
                         }
                 ],
                 "activationEvents": [
-                        "onStartupFinished",
-                        "onCommand:code-kanban.helloWorld"
+                        "onCommand:code-kanban.init"
                 ]
         },
         "keybindings": [
