--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,41 +1,34 @@
 name: Publish VS Code Extension
 
 on:
-  push:
-    tags:
-      - "v*"  # 匹配所有以 "v" 开头的 tag（如 v1.0.0）
-    branches:
-      - master
-      - release
+        push:
+                tags:
+                        - "v*" # 匹配所有以 "v" 开头的 tag（如 v1.0.0）
+                branches:
+                        - master
+                        - release
 
 jobs:
-  build-and-publish:
-    runs-on: ubuntu-latest
+        build-and-publish:
+                runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+                steps:
+                        - name: Checkout code
+                          uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20  # 根据你的项目需求调整 Node 版本
+                        - name: Setup Node.js
+                          uses: actions/setup-node@v4
+                          with:
+                                  node-version: 20 # 根据你的项目需求调整 Node 版本
 
-      - name: Install Dependencies
-        run: npm install -g vsce && npm ci  # 安装全局 vsce 和项目依赖
+                        - name: Install Dependencies
+                          run: npm install -g vsce && npm ci # 安装全局 vsce 和项目依赖
 
-      - name: Build VSIX Package
-        run: vsce package  # 生成 .vsix 文件（默认输出格式为 NAME-VERSION.vsix）
-  
-      - name: 上传Release文件
-        uses: softprops/action-gh-release@v2.2.1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          tag_name: ${{ github.ref }}
-          name: Release ${{ github.ref }}
-          body: New Release.
-          draft: false
-          prerelease: false
-          files: |
-            code-kanban-${{ github.ref }}.vsix
-          
+                        - name: Build VSIX Package
+                          run: vsce package # 生成 .vsix 文件（默认输出格式为 NAME-VERSION.vsix）
+
+                        - name: Upload Artifact
+                          uses: actions/upload-artifact@v4
+                          with:
+                                  name: extension.vsix
+                                  path: "*.vsix" # 上传生成的 .vsix 文件
